[FIX] web: Remove scrollbar overlay mixin
The mixin "o-scrollbar-overlay" has been removed since it layed on
non-standard CSS properties to make the scrollbar overlap on the
content. A "overflow-y: auto" has been applied instead since there was
no use for this behaviour in community.

--- a/addons/web/static/src/scss/utils.scss
+++ b/addons/web/static/src/scss/utils.scss
@@ -385,13 +385,6 @@
     }
 }
 
-// Scrollbar doesn't overlap with content
-@mixin o-scrollbar-overlay {
-    overflow-y: auto;
-    overflow-y: overlay;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
-}
-
 %o-nocontent-init-image {
     content: "";
     display: block;
